zookeeper/openshift-scripts/deployconfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  generation: 2
  labels:
    app: rzozookeeper
  name: rzozookeeper
  namespace: rzo-test
spec:
  replicas: 1
  selector:
    app: rzozookeeper
    deploymentconfig: rzozookeeper
  template:
    metadata:
      labels:
        app: rzozookeeper
        deploymentconfig: rzozookeeper
    spec:
      containers:
      - image: >-
          docker-registry.default.svc:5000/rzo-test/rzozookeeper@sha256:latest
        imagePullPolicy: Always
        name: rzozookeeper
        ports:
        - containerPort: 2181
          protocol: TCP
        - containerPort: 2888
          protocol: TCP
        - containerPort: 3888
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - rzozookeeper
      from:
        kind: ImageStreamTag
        name: 'rzozookeeper:latest'
        namespace: rzo-test
      lastTriggeredImage: >-
        docker-registry.default.svc:5000/rzo-test/rzozookeeper@sha256:d2f180d5b86cb74c89547c3b39e73b7bbb1ad9b17d94b0438f3808dc0dd5ef56
    type: ImageChange
status:
  availableReplicas: 0
  conditions:
  - lastTransitionTime: '2018-12-11T20:52:28Z'
    lastUpdateTime: '2018-12-11T20:52:28Z'
    message: Deployment config does not have minimum availability.
    status: 'False'
    type: Available
  - lastTransitionTime: '2018-12-11T20:52:29Z'
    lastUpdateTime: '2018-12-11T20:52:29Z'
    message: >-
      replication controller "rzozookeeper-1" is waiting for pod
      "rzozookeeper-1-deploy" to run
    status: Unknown
    type: Progressing
  details:
    causes:
    - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 2
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
