zookeeper/openshift-scripts/route.yml
apiVersion: v1
kind: Route
metadata:
  name: rzozookeeper-8080
  namespace: "rzo-test"
spec:
  port:
    targetPort: "8080-tcp"
  tls:
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: "rzozookeeper"
    weight: 100
  wildcardPolicy: None
